--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^24.1.0",
+    "@types/node": "24.2.0",
     "@vitest/ui": "^3.2.4",
     "typescript": "^5.9.2",
     "vite": "^7.0.6",
@@ -40,7 +40,8 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.1",
-    "fast-xml-parser": "^5.2.5"
+    "fast-xml-parser": "^5.2.5",
+    "zod": "^3.25.76"
   },
   "engines": {
     "node": ">=18"
